# oneway-lints

./: .gitignore  CHANGELOG.md  LICENSE-MIT  README.md  justfile
cli/: Cargo.toml  README.md
cli/src/: main.rs
lints/: Cargo.toml  README.md  rust-toolchain.toml
lints/docs/: inline_format_args.md  mod_after_use.md  no_comments.md  no_explicit_return.md  no_glob_imports.md  no_if_else.md  no_loop.md  no_nested_functions.md  no_panic.md  no_self_orchestration.md  no_turbofish.md  no_unwrap.md  one_constructor_name.md  one_public_type_per_file.md  prefer_combinators.md  raw_primitive_field.md  raw_primitive_param.md  subject_first_param.md  too_many_params.md  type_derived_naming.md  unsorted_derives.md  unsorted_enum_variants.md  unsorted_impl_methods.md  unsorted_match_arms.md  unsorted_struct_fields.md
lints/examples/: thiserror_naming.rs
lints/src/: architecture.rs  control_flow.rs  functions.rs  lib.rs  naming.rs  organization.rs  path_ext.rs  primitives.rs  sorting.rs  style.rs
lints/tests/: ui.rs
lints/ui/: mod_after_use.rs  mod_after_use.stderr  no_comments.rs  no_comments.stderr  no_if_else.rs  no_if_else.stderr  no_loop.rs  no_loop.stderr  no_nested_functions.rs  no_nested_functions.stderr  no_self_orchestration.rs  no_self_orchestration.stderr  no_turbofish.rs  no_turbofish.stderr  one_constructor_name.rs  one_constructor_name.stderr  one_public_type_per_file.rs  one_public_type_per_file.stderr  raw_primitive_field.rs  raw_primitive_field.stderr  raw_primitive_param.rs  raw_primitive_param.stderr  subject_first_param.rs  subject_first_param.stderr  type_derived_naming.rs  type_derived_naming.stderr  unsorted_derives.rs  unsorted_derives.stderr  unsorted_enum_variants.rs  unsorted_enum_variants.stderr  unsorted_impl_methods.rs  unsorted_impl_methods.stderr  unsorted_match_arms.rs  unsorted_match_arms.stderr  unsorted_struct_fields.rs  (+1 more)
(+3 files in other folders)
