[package]
name = "oneway-lints"
version = "0.1.0"
edition = "2021"
description = "Opinionated dylint library implementing the Oneway philosophy for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Almaju/oneway-lints"
readme = "README.md"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
dylint_linting = "3.3"

[dev-dependencies]
dylint_testing = "3.3"
thiserror = "2"

# WHY: `examples/` live in the `dev-dependencies` graph and we want to
# test the lints on a real `thiserror` codegen pattern that mirrors the
# `#[from]` issue users hit in the wild.
[[example]]
name = "thiserror_naming"
path = "examples/thiserror_naming.rs"

[package.metadata.rust-analyzer]
rustc_private = true
